# Homeworks_Netology_C_plus_plus

./: .gitignore  README.md  Команды GIT.txt
AdvancedProgramming/hw1-ProgramWithErrors/: ProgramWithErrors.cpp  hw1-ProgramWithErrors.sln  hw1-ProgramWithErrors.vcxproj
BasicProgramming/: README.md
BasicProgramming/09-CMake/hm2_my_complicated_cmake_project/: CMakeLists.txt
BasicProgramming/09-CMake/hm2_my_complicated_cmake_project/exe/: my_complicated_cmake_project.ilk
BasicProgramming/09-CMake/hm2_my_complicated_cmake_project/include/: Polygon.h  Quadrilateral.h
BasicProgramming/09-CMake/hm2_my_complicated_cmake_project/src/: TriangleIsosceles.cpp  TriangleRight.cpp
BasicProgramming/09-CMake/hm2_my_complicated_cmake_project_v2/: CMakeLists.txt  README.md
BasicProgramming/09-CMake/hm2_my_complicated_cmake_project_v2/include/: QuadrilateralRect.h  QuadrilateralSquare.h
BasicProgramming/09-CMake/hm2_my_complicated_cmake_project_v2/src/: TriangleEquilateral.cpp
BasicProgramming/10-DLL/hm3-DinamicLibraryCMake/: CMakeLists.txt  LeaverEXE.cpp
BasicProgramming/10-DLL/hm3-DinamicLibraryCMake/LeaverDLL/: Leaver.cpp  Leaver.h
BasicProgramming/10-DLL/hm5-ClassHierarchyDLL_CMake/: CMakeLists.txt  README.md
BasicProgramming/10-DLL/hm5-ClassHierarchyDLL_CMake/PolygonDLL/: Polygon.cpp  Quadrilateral.h  QuadrilateralRhomb.cpp  QuadrilateralRhomb.h  QuadrilateralSquare.cpp  TriangleIsosceles.h
BasicProgramming/10-DLL/hm5-ClassHierarchyDLL_CMake/PolygonEXE/: PolygonEXE.cpp
BasicProgramming/11-GAME/: README.md  README1.md
BasicProgramming/11-GAME/RaceCMake/: .gitignore  CMakeLists.txt  README.md  tmp.txt
BasicProgramming/11-GAME/RaceCMake/RaceDLL/: CMakeLists.txt
BasicProgramming/11-GAME/RaceCMake/RaceEXE/: CMakeLists.txt
Completion_of_training/: README.md
Databases/01-DatabaseModel/: MusicSite.drawio
Databases/02-CreateDatabase/: MusicSite.drawio  MusicSiteNew.drawio  Script.sql
Databases/03-AdvancedDataSampling/: 1-INSERT.sql  2-SELECT.sql  3-CREATE.sql  README.md  ScriptCreateTableAndData.sql  dump-MusicSite-202509290002.sql
Databases/04-Working_with_PostgreSQL_from_C++/hw1-Working_with_PostgreSQL/: .gitignore  CMakeLists.txt  CreateTable_for_ClientBD.sql  hw1-Working_with_PostgreSQL.sln  hw1-Working_with_PostgreSQL.vcxproj
Databases/04-Working_with_PostgreSQL_from_C++/hw1-Working_with_PostgreSQL/libpqxx-master/: appveyor.yml
Databases/04-Working_with_PostgreSQL_from_C++/hw1-Working_with_PostgreSQL/src/: ClientUtil.cpp  ClientUtil.h  Main.cpp
DesignPatterns/02-StructuralPatterns/: README.md
DesignPatterns/03-BehavioralPatterns/: README.md
FinalDiplom/: Readme.md  Readme2.md
FinalDiplom/DatabaseManager/: DatabaseManager.cpp  DatabaseManager.h  DatabaseManager.vcxproj  Main.cpp
FinalDiplom/Distributiv/: config.ini
FinalDiplom/Indexer/: .gitignore  Indexer.cpp  Indexer.h  Indexer.vcxproj  Indexer.vcxproj.filters  Main.cpp
FinalDiplom/IniFiles/: .gitignore  IniFile.cpp  IniFiles.sln  IniFiles.vcxproj  Main.cpp  Main.txt  config.ini
FinalDiplom/LinkExtractor/: LinkExtractor.cpp  LinkExtractor.vcxproj  Main.cpp
FinalDiplom/Source/: Source.sln
FinalDiplom/SpiderClient/: SpiderClient.cpp  SpiderClient.h  SpiderClient.sln  SpiderClient.vcxproj  SpiderClient.vcxproj.filters  UrlUtils.cpp  UrlUtils.h
FinalDiplom/SpiderEngine/: Main.cpp  SpiderEngine.cpp  SpiderEngine.sln  SpiderEngine.vcxproj  SpiderEngine.vcxproj.filters
FinalDiplom/spider/: DatabaseManager.h  Main.cpp  README.md  SpiderClient.cpp  SpiderClient.h  config.ini  spider.sln  spider.vcxproj  spider.vcxproj.filters
Multithreading/01-Multithreading/: README.md
Multithreading/02-Competition, race condition/: README.md
Multithreading/03-Asynchronous programming/: README.md
Multithreading/03-AsynchronousProgramming/: README.md
Multithreading/04-NetworkProgramming/: README.md
Multithreading/05-Docker/: Dockerfile  Test.cpp  hw1-Months.cpp  Команды Docker.txt
Qt_programming/01-Introduction_to_Qt/: README.md
Qt_programming/02-Basic_Qt_Modules/: .gitignore
Qt_programming/02-Basic_Qt_Modules/basic_qt/: CMakeLists.txt  main.cpp
Qt_programming/03-Qt_Designer/: .gitignore
Qt_programming/10-Qt_Diplom/: .gitignore  CMakeLists.txt
Qt_programming/10-Qt_Diplom/apps/db_demo/: CMakeLists.txt  db_demo.ini.example  main.cpp
Qt_programming/10-Qt_Diplom/apps/indexer/: CMakeLists.txt  main.cpp
Qt_programming/10-Qt_Diplom/apps/searcher/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
Qt_programming/10-Qt_Diplom/config/: indexer.ini.example  searcher.ini.example
Qt_programming/10-Qt_Diplom/libs/SearchDb/: CMakeLists.txt  SearchDatabase.cpp  SearchDatabase.h  TextIndex.cpp  TextIndex.h
Qt_programming/11-Qt_Diplom_New/Source/1.DatabaseManager/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  README.md  config.ini  main.cpp
Qt_programming/11-Qt_Diplom_New/Source/1.DatabaseManager/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
Qt_programming/11-Qt_Diplom_New/Source/1.DatabaseManager/build-mingw/.qt/: QtDeploySupport.cmake
Qt_programming/11-Qt_Diplom_New/Source/1.DatabaseManager/build-mingw/DatabaseManagerQtConsole_autogen/: deps
Qt_programming/11-Qt_Diplom_New/Source/1.DatabaseManager/build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DatabaseManagerQtConsole.sln  DatabaseManagerQtConsole.vcxproj  DatabaseManagerQtConsole.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Qt_programming/11-Qt_Diplom_New/Source/1.DatabaseManager/build-vs/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
Qt_programming/12-Qt_Diplom/Source/DatabaseManager/: .gitignore  CMakeLists.txt  DbManager.cpp  DbManager.h  main.cpp
Qt_programming/12-Qt_Diplom/Source/DatabaseManager/build-mingw/: CMakeCache.txt
Qt_programming/12-Qt_Diplom/Source/indexer/: CMakeLists.txt  Indexer.cpp  Indexer.h  config.ini  main.cpp
Qt_programming/12-Qt_Diplom/Source/search/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+926 files in other folders)
